--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "「Everyone worth a love.」"
+description: "「Everyone worth a love. And thanks @hux to provide the template.」"
 ---
 
 {% for post in paginator.posts %}
